[tool.poetry]
name = "advancement-count"
version = "1.1.0"
description = ""
authors = ["2mal3 <56305732+2mal3@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beet = "~0.96.0"
mecha = "~0.80.0"
bolt = "~0.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
